# drawdowncalc

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  taxes_federal.toml  taxes_state.toml
ddcalc/: cli.py  ddcalc.py  server.py
ddcalc/core/: data_loader.py  model_builder.py  results_processor.py
ddcalc/utils/: pulp.py
examples/: dcsingle.toml  madness.toml  sample.toml
fplan/: cli.py  fplan.py  server.py
fplan/core/: model_builder.py
reference/: taxes_federal.toml  taxes_state.toml
src/fplan/: __init__.py  data_loader.py  fplan.py  fplan_class.py  fplan_pulp.py  fplan_server.py  model_builder.py  results_processor.py
